--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
   </div>
 </div>
 
+<div id="logViewer" style="max-width:350px; margin:10px auto; display:none;">
+  <h4>📋 오늘 순찰 로그</h4>
+  <textarea id="logContent" readonly 
+    style="width:100%; height:150px; font-size:14px; padding:5px; border:1px solid #007bff; border-radius:5px;">
+  </textarea>
+</div>
+
 <div id="upcomingPanel">
   <h4>⏰ 순찰 후 순찰완료 요망</h4>
   <ul id="upcomingList"></ul>
@@ -246,18 +253,29 @@ function completePatrol(){
   const patrolId=activePatrol.task.id;
   const data=lampData[patrolId];
   const patrolTime=new Date().toLocaleString("ko-KR");
-  const logLine=`아이디: ${patrolId}, 순찰시간: ${patrolTime}, 고유이름: ${data?.고유이름||"이름 정보 없음"}, 주소: ${data?.주소||"주소 정보 없음"}\n`;
+  const logLine=`아이디: ${patrolId}, 순찰시간: ${patrolTime}, 고유이름: ${data?.고유이름||"이름 없음"}, 주소: ${data?.주소||"주소 없음"}\n`;
 
   const todayKey="patrol_text_log_" + new Date().toISOString().slice(0,10);
   const existingLog = localStorage.getItem(todayKey) || "";
   const newLog = existingLog + logLine;
   localStorage.setItem(todayKey,newLog);
 
-  // 👉 모바일 여부 확인
-  const isMobile = /Android|iPhone|iPad/i.test(navigator.userAgent);
+  // 👉 오래된 로그(7일 이상 지난 것) 자동 삭제
+  const today = new Date();
+  for (let i=0; i<localStorage.length; i++){
+    const key = localStorage.key(i);
+    if (key.startsWith("patrol_text_log_")){
+      const dateStr = key.replace("patrol_text_log_","");
+      const logDate = new Date(dateStr);
+      if ((today - logDate) / (1000*60*60*24) > 7){
+        localStorage.removeItem(key);
+      }
+    }
+  }
 
+  const isMobile = /Android|iPhone|iPad/i.test(navigator.userAgent);
   if (!isMobile) {
-    // PC에서는 파일 자동 다운로드
+    // PC: 파일 자동 다운로드
     const blob=new Blob([newLog],{type:"text/plain"});
     const fileName=`patrol_log_${new Date().toISOString().slice(0,10)}.txt`;
     const url=URL.createObjectURL(blob);
@@ -265,8 +283,9 @@ function completePatrol(){
     a.href=url; a.download=fileName; a.style.display="none";
     document.body.appendChild(a); a.click(); document.body.removeChild(a); URL.revokeObjectURL(url);
   } else {
-    // 모바일에서는 팝업 없이 로컬 저장만
-    console.log("📱 모바일: 파일 다운로드는 생략, localStorage에만 기록 저장됨.");
+    // 📱 모바일: 로그 뷰어에 표시
+    document.getElementById("logViewer").style.display="block";
+    document.getElementById("logContent").value=newLog;
   }
 
   activePatrol=null;
@@ -281,6 +300,7 @@ document.addEventListener("DOMContentLoaded",()=>{
 </script>
 </body>
 </html>
+
 
 
 
