--- a/index.html
+++ b/index.html
@@ -67,7 +67,17 @@
   <h4>⏰ 순찰 후 순찰완료 요망</h4>
   <ul id="upcomingList"></ul>
 </div>
-
+  
+<!-- 📋 로그 뷰어 (토글 버튼 포함) -->
+<div id="logViewer" style="position:fixed; bottom:10px; right:10px; width:250px; background:#fff; border:1px solid #007bff; border-radius:5px; box-shadow:2px 2px 5px rgba(0,0,0,0.2); z-index:9999; display:none;">
+  <div style="background:#007bff; color:white; padding:5px; cursor:pointer;" onclick="toggleLogViewer()">
+    📋 오늘 순찰 로그 (열기/닫기)
+  </div>
+  <textarea id="logContent" readonly
+    style="width:100%; height:150px; font-size:14px; padding:5px; border:none; resize:none; display:block;">
+  </textarea>
+</div>
+  
 <div id="map"></div>
 
 <script>
@@ -273,50 +283,57 @@ function navigateToPatrol(){
 
 function completePatrol(){
   if(!activePatrol){ return; }
+
+  // ✅ 오늘 완료 순찰 목록 갱신
   completedPatrols.add(activePatrol.key);
-  localStorage.setItem("patrol_" + new Date().toISOString().slice(0,10), JSON.stringify([...completedPatrols]));
+  localStorage.setItem(
+    "patrol_" + new Date().toISOString().slice(0,10),
+    JSON.stringify([...completedPatrols])
+  );
 
-  const patrolId=activePatrol.task.id;
-  const data=lampData[patrolId];
-  const patrolTime=new Date().toLocaleString("ko-KR");
-  const logLine=`아이디: ${patrolId}, 순찰시간: ${patrolTime}, 고유이름: ${data?.고유이름||"이름 없음"}, 주소: ${data?.주소||"주소 없음"}\n`;
+  // ✅ 순찰 로그 기록
+  const patrolId = activePatrol.task.id;
+  const data = lampData[patrolId];
+  const patrolTime = new Date().toLocaleString("ko-KR");
+  const logLine = `아이디: ${patrolId}, 순찰시간: ${patrolTime}, 고유이름: ${data?.고유이름||"이름 없음"}, 주소: ${data?.주소||"주소 없음"}\n`;
 
-  const todayKey="patrol_text_log_" + new Date().toISOString().slice(0,10);
+  const todayKey = "patrol_text_log_" + new Date().toISOString().slice(0,10);
   const existingLog = localStorage.getItem(todayKey) || "";
   const newLog = existingLog + logLine;
-  localStorage.setItem(todayKey,newLog);
+  localStorage.setItem(todayKey, newLog);
 
-  // 👉 오래된 로그(2일 이상 지난 것) 자동 삭제
+  // ✅ 오래된 로그(2일 이상 지난 것) 자동 삭제
   const today = new Date();
-  for (let i=0; i<localStorage.length; i++){
+  const keysToDelete = [];
+  for (let i = 0; i < localStorage.length; i++){
     const key = localStorage.key(i);
     if (key.startsWith("patrol_text_log_")){
       const dateStr = key.replace("patrol_text_log_","");
       const logDate = new Date(dateStr);
       if ((today - logDate) / (1000*60*60*24) > 2){
-        localStorage.removeItem(key);
+        keysToDelete.push(key);
       }
     }
   }
+  keysToDelete.forEach(k => localStorage.removeItem(k));
 
-  const isMobile = /Android|iPhone|iPad/i.test(navigator.userAgent);
-  if (!isMobile) {
-    // PC: 파일 자동 다운로드
-    const blob=new Blob([newLog],{type:"text/plain"});
-    const fileName=`patrol_log_${new Date().toISOString().slice(0,10)}.txt`;
-    const url=URL.createObjectURL(blob);
-    const a=document.createElement("a");
-    a.href=url; a.download=fileName; a.style.display="none";
-    document.body.appendChild(a); a.click(); document.body.removeChild(a); URL.revokeObjectURL(url);
-  } else {
-    // 📱 모바일: 로그 뷰어에 표시
-    document.getElementById("logViewer").style.display="block";
-    document.getElementById("logContent").value=newLog;
-  }
-
-  activePatrol=null;
+  // ✅ 뷰어나 다운로드 자동 실행 ❌ (ON/OFF는 toggleLogViewer()에서만)
+  activePatrol = null;
   showUpcomingPatrols();
 }
+
+// 📋 로그 뷰어 ON/OFF
+  function toggleLogViewer(){
+    const viewer=document.getElementById("logViewer");
+    if(viewer.style.display==="none" || viewer.style.display===""){
+      const todayKey="patrol_text_log_" + new Date().toISOString().slice(0,10);
+      document.getElementById("logContent").value=localStorage.getItem(todayKey)||"";
+      viewer.style.display="block";
+    } else {
+      viewer.style.display="none";
+    }
+  }
+
 document.addEventListener("DOMContentLoaded",()=>{
   document.getElementById("upcomingPanel").addEventListener("click",e=>{
     if(e.target.tagName.toLowerCase()!=="li") e.currentTarget.classList.toggle("hidden");
@@ -326,6 +343,7 @@ document.addEventListener("DOMContentLoaded",()=>{
 </script>
 </body>
 </html>
+
 
 
 
