--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <ul id="upcomingList"></ul>
 </div>
   
-<!-- 📋 로그 뷰어 (토글 버튼 포함) -->
+<!-- 📋 오른쪽 아래 고정형 로그 뷰어 -->
 <div id="logViewer" style="position:fixed; bottom:10px; right:10px; width:250px; background:#fff; border:1px solid #007bff; border-radius:5px; box-shadow:2px 2px 5px rgba(0,0,0,0.2); z-index:9999; display:none;">
   <div style="background:#007bff; color:white; padding:5px; cursor:pointer;" onclick="toggleLogViewer()">
     📋 오늘 순찰 로그 (열기/닫기)
@@ -343,6 +343,7 @@ document.addEventListener("DOMContentLoaded",()=>{
 </script>
 </body>
 </html>
+
 
 
 
