--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </div>
   
 <!-- 📋 오른쪽 아래 고정형 로그 뷰어 -->
-<div id="logViewer" style="position:fixed; bottom:10px; right:10px; width:250px; background:#fff; border:1px solid #007bff; border-radius:5px; box-shadow:2px 2px 5px rgba(0,0,0,0.2); z-index:9999; display:none;">
+<div id="logViewer" style="position:fixed; bottom:10px; right:10px; width:250px; background:#fff; border:1px solid #007bff; border-radius:5px; box-shadow:2px 2px 5px rgba(0,0,0,0.2); z-index:9999;">
   <div style="background:#007bff; color:white; padding:5px; cursor:pointer;" onclick="toggleLogViewer()">
     📋 오늘 순찰 로그 (열기/닫기)
   </div>
@@ -327,15 +327,18 @@ function completePatrol(){
     }
   }
 
-document.addEventListener("DOMContentLoaded",()=>{
+document.addEventListener("DOMContentLoaded", ()=>{
+  toggleLogViewer(); // 처음부터 열기
   document.getElementById("upcomingPanel").addEventListener("click",e=>{
     if(e.target.tagName.toLowerCase()!=="li") e.currentTarget.classList.toggle("hidden");
   });
-  initMap(); updatePatrolDisplay();
+  initMap(); 
+  updatePatrolDisplay();
 });
 </script>
 </body>
 </html>
+
 
 
 
