--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
 </div>
   
 <!-- 📋 오른쪽 아래 고정형 로그 뷰어 -->
-<div id="logViewer" style="position:fixed; bottom:10px; right:10px; width:250px; background:#fff; border:1px solid #007bff; border-radius:5px; box-shadow:2px 2px 5px rgba(0,0,0,0.2); z-index:9999;">
+<div id="logViewer" style="position:fixed; bottom:10px; right:10px; width:250px; 
+  background:#fff; border:1px solid #007bff; border-radius:5px; 
+  box-shadow:2px 2px 5px rgba(0,0,0,0.2); z-index:9999;">
   <div style="background:#007bff; color:white; padding:5px; cursor:pointer;" onclick="toggleLogViewer()">
     📋 오늘 순찰 로그 (열기/닫기)
   </div>
   <textarea id="logContent" readonly
-    style="width:100%; height:150px; font-size:14px; padding:5px; border:none; resize:none; display:block;">
+    style="width:100%; height:150px; font-size:14px; padding:5px; border:none; resize:none; display:none;">
   </textarea>
 </div>
   
@@ -316,19 +318,19 @@ function completePatrol(){
 }
 
 // 📋 로그 뷰어 ON/OFF
-  function toggleLogViewer(){
-    const viewer=document.getElementById("logViewer");
-    if(viewer.style.display==="none" || viewer.style.display===""){
-      const todayKey="patrol_text_log_" + new Date().toISOString().slice(0,10);
-      document.getElementById("logContent").value=localStorage.getItem(todayKey)||"";
-      viewer.style.display="block";
-    } else {
-      viewer.style.display="none";
-    }
+function toggleLogViewer(){
+  const logContent=document.getElementById("logContent");
+  if(logContent.style.display==="none" || logContent.style.display===""){
+    const todayKey="patrol_text_log_" + new Date().toISOString().slice(0,10);
+    logContent.value=localStorage.getItem(todayKey)||"";
+    logContent.style.display="block";
+  } else {
+    logContent.style.display="none";
   }
+}
 
 document.addEventListener("DOMContentLoaded", ()=>{
-  toggleLogViewer(); // 처음부터 열기
+  // 처음에는 textarea 닫힘 상태 유지
   document.getElementById("upcomingPanel").addEventListener("click",e=>{
     if(e.target.tagName.toLowerCase()!=="li") e.currentTarget.classList.toggle("hidden");
   });
@@ -338,6 +340,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
