--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
   <button id="completeBtn" onclick="completePatrol()">✅ 순찰 완료</button>
   <button id="logToggleBtn" onclick="toggleLogViewer()">📋 순찰로그</button>
   <button id="navigateBtn" onclick="navigateToPatrol()">📍 길찾기</button>
-  </div>
+</div>
+
+<!-- 순찰 로그 textarea -->
+<textarea id="logContent" 
+          style="display:none; width:90%; max-width:350px; height:150px; margin:10px auto; padding:8px; border:1px solid #007bff; border-radius:5px; font-size:14px; white-space:pre-wrap; overflow-y:auto;"></textarea>
+  
 <div id="upcomingPanel">
   <h4>⏰ 순찰 후 순찰완료 요망</h4>
   <ul id="upcomingList"></ul>
@@ -349,6 +354,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
