--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <button id="copyRouteBtn">📋 위치 url 복사</button>
   </div>
 
-  <!-- 순찰완료, 순찰로그, 길찾기 버튼 순서 변경 -->
-  <div style="display:flex; flex-direction:column; gap:10px; max-width:350px; margin:10px auto;">
-    <button id="completeBtn" onclick="completePatrol()">✅ 순찰 완료</button>
-    <button id="logBtn" onclick="toggleLogViewer()">📋 순찰 로그</button>
-    <button id="navigateBtn" onclick="navigateToPatrol()">📍 길찾기</button>
+  <!-- 순찰완료, 순찰로그, 길찾기 버튼 한 줄 -->
+  <div style="display:flex; flex-direction:row; justify-content:center; gap:5px; max-width:350px; margin:10px auto;">
+  <button id="completeBtn" onclick="completePatrol()" style="flex:1; background:#28a745; color:white; border:none; padding:10px; border-radius:5px; font-size:14px; cursor:pointer;">✅ 순찰 완료</button>
+  <button id="logBtn" onclick="toggleLogViewer()" style="flex:1; background:#ffc107; color:white; border:none; padding:10px; border-radius:5px; font-size:14px; cursor:pointer;">📋 순찰 로그</button>
+  <button id="navigateBtn" onclick="navigateToPatrol()" style="flex:1; background:#007bff; color:white; border:none; padding:10px; border-radius:5px; font-size:14px; cursor:pointer;">📍 길찾기</button>
   </div>
 
   <!-- 로그 textarea -->
@@ -70,18 +70,6 @@
 <div id="upcomingPanel">
   <h4>⏰ 순찰 후 순찰완료 요망</h4>
   <ul id="upcomingList"></ul>
-</div>
-  
-<!-- 📋 오른쪽 아래 고정형 로그 뷰어 -->
-<div id="logViewer" style="position:fixed; bottom:10px; right:10px; width:250px; 
-  background:#fff; border:1px solid #007bff; border-radius:5px; 
-  box-shadow:2px 2px 5px rgba(0,0,0,0.2); z-index:9999;">
-  <div style="background:#007bff; color:white; padding:5px; cursor:pointer;" onclick="toggleLogViewer()">
-    📋 순찰 로그
-  </div>
-  <textarea id="logContent" readonly
-    style="width:100%; height:150px; font-size:14px; padding:5px; border:none; resize:none; display:none;">
-  </textarea>
 </div>
   
 <div id="map"></div>
@@ -366,5 +354,6 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
