--- a/index.html
+++ b/index.html
@@ -162,33 +162,52 @@ function showUpcomingPatrols(){
     const li=document.createElement("li");
     li.style.color = item.isInTime ? "blue" : "black";
     li.textContent = `${item.task.id} - ${pad(item.hour)}:${pad(item.minute)}~${pad(item.endHour)}:${pad(item.endMinute)}`;
-    li.onclick=()=>{
-      activePatrol={task:item.task,hour:item.hour,minute:item.minute,key:item.key};
-      const id=item.task.id;
-      if(!lampData[id]){ alert("해당 ID의 좌표 정보가 없습니다."); return; }
-      const pos=parseCoords(lampData[id].좌표);
+    li.onclick = () => {
+  activePatrol = { task: item.task, hour: item.hour, minute: item.minute, key: item.key };
+  const id = item.task.id;
+  if (!lampData[id]) { alert("해당 ID의 좌표 정보가 없습니다."); return; }
+  const pos = parseCoords(lampData[id].좌표);
 
-      // ✅ 1. 카카오 길찾기 열기
-      window.open(`https://map.kakao.com/link/to/${encodeURIComponent(item.task.id)},${pos.lat},${pos.lng}`,"_blank");
+  // 1️⃣ 카카오 길찾기 열기
+  window.open(`https://map.kakao.com/link/to/${encodeURIComponent(item.task.id)},${pos.lat},${pos.lng}`, "_blank");
 
-      // ✅ 2. 완료버튼 표시 (순찰완료는 사용자가 직접 눌러야만 실행됨)
-      const completeDiv = document.createElement("div");
-      completeDiv.innerHTML = `
-        <div style="padding:10px; background:#fffae6; border:1px solid #ccc; margin:5px;">
-          <strong>${item.task.id}</strong> 순찰을 완료하시겠습니까?
-          <button id="forceCompleteBtn">✅ 순찰완료</button>
-        </div>
-      `;
-      document.body.prepend(completeDiv);
+  // 2️⃣ 모달 생성
+  const modal = document.createElement("div");
+  modal.id = "patrolCompleteModal";
+  modal.style.position = "fixed";
+  modal.style.top = "0";
+  modal.style.left = "0";
+  modal.style.width = "100%";
+  modal.style.height = "100%";
+  modal.style.background = "rgba(0,0,0,0.5)";
+  modal.style.display = "flex";
+  modal.style.alignItems = "center";
+  modal.style.justifyContent = "center";
+  modal.style.zIndex = "9999";
 
-      document.getElementById("forceCompleteBtn").addEventListener("click", () => {
-        completePatrol();   // 👉 localStorage 기록 + 리스트 업데이트
-        alert("✅ 순찰완료 처리되었습니다.");
-        location.reload();  // 👉 자동 초기화면 복귀
-      });
-    };
-    list.appendChild(li);
+  modal.innerHTML = `
+    <div style="background:white; padding:20px; border-radius:10px; text-align:center; max-width:300px; width:80%;">
+      <p><strong>${item.task.id}</strong> 순찰을 완료하시겠습니까?</p>
+      <button id="modalCompleteBtn" style="padding:10px 20px; background:#28a745; color:white; border:none; border-radius:5px; cursor:pointer;">✅ 순찰완료</button>
+      <button id="modalCancelBtn" style="padding:10px 20px; background:#ccc; color:black; border:none; border-radius:5px; cursor:pointer; margin-left:10px;">❌ 취소</button>
+    </div>
+  `;
+
+  document.body.appendChild(modal);
+
+  // 3️⃣ 완료 버튼 클릭 시
+  document.getElementById("modalCompleteBtn").addEventListener("click", () => {
+    completePatrol();   // localStorage 기록 + 리스트 업데이트
+    alert("✅ 순찰완료 처리되었습니다.");
+    document.body.removeChild(modal);  // 모달 제거
+    location.reload();  // 초기화면 복귀
   });
+
+  // 4️⃣ 취소 버튼 클릭 시
+  document.getElementById("modalCancelBtn").addEventListener("click", () => {
+    document.body.removeChild(modal);  // 모달 제거만
+  });
+};
 }
 
 
@@ -372,6 +391,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
