--- a/index.html
+++ b/index.html
@@ -162,12 +162,25 @@ function showUpcomingPatrols(){
     const li=document.createElement("li");
     li.style.color = item.isInTime ? "blue" : "black";
     li.textContent = `${item.task.id} - ${pad(item.hour)}:${pad(item.minute)}~${pad(item.endHour)}:${pad(item.endMinute)}`;
-    li.onclick=()=>{
-      activePatrol={task:item.task,hour:item.hour,minute:item.minute,key:item.key};
-      const id=item.task.id;
-      if(!lampData[id]){ alert("해당 ID의 좌표 정보가 없습니다."); return; }
-      const pos=parseCoords(lampData[id].좌표);
-      window.open(`https://map.kakao.com/link/to/${encodeURIComponent(item.task.id)},${pos.lat},${pos.lng}`,"_blank");
+    li.onclick = () => {
+      activePatrol = {task:item.task,hour:item.hour,minute:item.minute,key:item.key};
+      const id = item.task.id;
+      if (!lampData[id]) {
+        alert("해당 ID의 좌표 정보가 없습니다.");
+        return;
+      }
+      const pos = parseCoords(lampData[id].좌표);
+
+      // ✅ 카카오맵 길찾기 실행
+      window.open(
+        `https://map.kakao.com/link/to/${encodeURIComponent(item.task.id)},${pos.lat},${pos.lng}`,
+        "_blank"
+      );
+
+      // ✅ 길찾기 실행 후 순찰완료 여부 확인
+      if (confirm("📍 순찰 길찾기를 실행했습니다.\n이 순찰을 완료 처리하시겠습니까?")) {
+        completePatrol();
+      }
     };
     list.appendChild(li);
   });
@@ -354,3 +367,4 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
