--- a/index.html
+++ b/index.html
@@ -171,14 +171,12 @@ function showUpcomingPatrols(){
       }
       const pos = parseCoords(lampData[id].좌표);
 
-      // ✅ 카카오맵 길찾기 실행
-      window.open(
-        `https://map.kakao.com/link/to/${encodeURIComponent(item.task.id)},${pos.lat},${pos.lng}`,
-        "_blank"
-      );
-
-      // ✅ 길찾기 실행 후 순찰완료 여부 확인
-      if (confirm("📍 순찰 길찾기를 실행했습니다.\n이 순찰을 완료 처리하시겠습니까?")) {
+      // ✅ 순찰 완료 여부 먼저 확인
+      if (confirm("📍 순찰 길찾기를 실행하시겠습니까?\n(확인 시 길찾기 실행 + 순찰완료 처리)")) {
+        window.open(
+          `https://map.kakao.com/link/to/${encodeURIComponent(item.task.id)},${pos.lat},${pos.lng}`,
+          "_blank"
+        );
         completePatrol();
       }
     };
@@ -367,4 +365,5 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
