--- a/index.html
+++ b/index.html
@@ -165,19 +165,16 @@ function showUpcomingPatrols(){
     li.onclick = () => {
       activePatrol = {task:item.task,hour:item.hour,minute:item.minute,key:item.key};
       const id = item.task.id;
-      if (!lampData[id]) {
-        alert("해당 ID의 좌표 정보가 없습니다.");
-        return;
+      if (!lampData[id]) { 
+        alert("해당 ID의 좌표 정보가 없습니다."); 
+        return; 
       }
       const pos = parseCoords(lampData[id].좌표);
 
-      // ✅ 먼저 빈 창을 띄운다
-      const popup = window.open("about:blank");
+      // ✅ 카카오맵 길찾기 실행
+      window.open(`https://map.kakao.com/link/to/${encodeURIComponent(item.task.id)},${pos.lat},${pos.lng}`,"_blank");
 
-      // ✅ 새 창에 카카오맵 길찾기 주소를 설정한다
-      popup.location.href = `https://map.kakao.com/link/to/${encodeURIComponent(item.task.id)},${pos.lat},${pos.lng}`;
-
-      // ✅ 길찾기 실행 후 순찰완료 여부 확인
+      // ✅ 순찰완료 바로 처리 여부 묻기
       if (confirm("📍 순찰 길찾기를 실행했습니다.\n이 순찰을 완료 처리하시겠습니까?")) {
         completePatrol();
       }
@@ -367,7 +364,3 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
-
-
-
-
