--- a/index.html
+++ b/index.html
@@ -165,17 +165,18 @@ function showUpcomingPatrols(){
     li.onclick = () => {
       activePatrol = {task:item.task,hour:item.hour,minute:item.minute,key:item.key};
       const id = item.task.id;
-      if (!lampData[id]) { 
-        alert("해당 ID의 좌표 정보가 없습니다."); 
-        return; 
+      if (!lampData[id]) {
+        alert("해당 ID의 좌표 정보가 없습니다.");
+        return;
       }
       const pos = parseCoords(lampData[id].좌표);
 
-      // ✅ 카카오맵 길찾기 실행
-      window.open(`https://map.kakao.com/link/to/${encodeURIComponent(item.task.id)},${pos.lat},${pos.lng}`,"_blank");
-
-      // ✅ 순찰완료 바로 처리 여부 묻기
-      if (confirm("📍 순찰 길찾기를 실행했습니다.\n이 순찰을 완료 처리하시겠습니까?")) {
+      // ✅ 순찰 완료 여부 먼저 확인
+      if (confirm("📍 순찰 길찾기를 실행하시겠습니까?\n(확인 시 길찾기 실행 + 순찰완료 처리)")) {
+        window.open(
+          `https://map.kakao.com/link/to/${encodeURIComponent(item.task.id)},${pos.lat},${pos.lng}`,
+          "_blank"
+        );
         completePatrol();
       }
     };
@@ -364,3 +365,4 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
