--- a/index.html
+++ b/index.html
@@ -171,23 +171,22 @@ function showUpcomingPatrols(){
       }
       const pos = parseCoords(lampData[id].좌표);
 
-      if (confirm("📍 순찰 길찾기를 실행하시겠습니까?\n(확인 시 길찾기 실행 + 순찰완료 처리)")) {
-        // ✅ 먼저 빈 창을 띄운 뒤 주소 지정
-        const popup = window.open("about:blank");
-        popup.location.href = `https://map.kakao.com/link/to/${encodeURIComponent(item.task.id)},${pos.lat},${pos.lng}`;
-    
-        // ✅ 순찰 완료 처리
+      if (confirm("📍 순찰 길찾기를 실행하시겠습니까?\n(확인 시 바로 카카오맵 실행 + 순찰완료 처리)")) {
+        // ✅ 순찰 완료 먼저 처리
         completePatrol();
 
-        // ✅ 팝업 닫힘 감지
+        // ✅ 팝업 없이 바로 카카오맵 열기
+        const kakaoUrl = `https://map.kakao.com/link/to/${encodeURIComponent(item.task.id)},${pos.lat},${pos.lng}`;
+        const popup = window.open(kakaoUrl, "_blank");
+
+        // ✅ 팝업 닫힘 감지 → 즉시 초기화면 복귀
         const checkPopup = setInterval(() => {
           if (popup.closed) {
             clearInterval(checkPopup);
-            alert("카카오맵 창이 닫혔습니다. 초기 화면으로 돌아갑니다.");
-            resetSearch(); // 지도, 검색, 클릭 좌표 초기화
+            resetSearch(); // 지도 초기화
             updatePatrolDisplay(); // 예정 목록 갱신
           }
-        }, 250);
+        }, 500);
       }
     };
     list.appendChild(li);
@@ -375,6 +374,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
