--- a/index.html
+++ b/index.html
@@ -279,72 +279,25 @@ function searchAndShow() {
 
 function resetSearch(){ searchMode=false; clearMarkers(); document.getElementById("keyword").value=""; lastClickedCoord=""; document.getElementById("clickedCoords").innerText="📍"; }
 
-function navigateToPatrol(){
-  if(!lastClickedCoord){ 
-    alert("⚠️ 먼저 지도를 클릭하여 목적지를 선택하세요."); 
-    return; 
+function navigateToPatrol() {
+  if (!lastClickedCoord) {
+    alert("⚠️ 먼저 지도를 클릭하여 목적지를 선택하세요.");
+    return;
   }
-  const [destLat,destLng] = lastClickedCoord.split(",");
+  const [destLat, destLng] = lastClickedCoord.split(",");
 
-  if(navigator.geolocation){
-    navigator.geolocation.getCurrentPosition(pos=>{
-      const startLat=pos.coords.latitude.toFixed(6);
-      const startLng=pos.coords.longitude.toFixed(6);
+  // 지도 표시 URL (앱 설치 시 카카오맵 앱으로, 미설치 시 웹으로 열림)
+  const mapUrl = `https://map.kakao.com/link/map/선택위치,${destLat},${destLng}`;
 
-      const appUrl = `kakaomap://route?sp=${startLat},${startLng}&ep=${destLat},${destLng}&by=CAR`;
-      const webUrl = `https://map.kakao.com/link/to/선택위치,${destLat},${destLng}`;
-
-      if(/Android|iPhone|iPad/i.test(navigator.userAgent)){
-        let attempts = 0;
-        const maxAttempts = 5;   // 최대 5회 재시도
-        const interval = 2000;   // 2초 간격
-
-        // ✅ iframe 방식 병행 → 앱 호출 안정성 강화
-        let iframe;
-        const tryOpenApp = () => {
-          attempts++;
-          // window.location 직접 시도
-          window.location.href = appUrl;
-
-          // iframe 시도 병행
-          if(!iframe){
-            iframe = document.createElement("iframe");
-            iframe.style.display="none";
-            iframe.src = appUrl;
-            document.body.appendChild(iframe);
-          } else {
-            iframe.src = appUrl; // 재시도마다 src 갱신
-          }
-
-          // 1.5초 후 앱 실행 여부 체크
-          const timeout = setTimeout(() => {
-            if(document.hidden){
-              // 앱이 정상적으로 열림
-              clearTimeout(timeout);
-            } else if(attempts < maxAttempts){
-              // 아직 앱 안 열렸으면 재시도
-              tryOpenApp();
-            } else {
-              // 최대 시도 후에도 실패 → 웹으로 fallback
-              window.open(webUrl, "_blank");
-            }
-          }, 1500);
-        };
-
-        tryOpenApp(); // 최초 호출
-      } else {
-        // PC 환경 → 바로 웹 링크
-        window.open(webUrl, "_blank");
-      }
-    },()=>{
-      alert("⚠️ 현위치를 가져올 수 없습니다. 웹으로 이동합니다."); 
-      window.open(`https://map.kakao.com/link/to/선택위치,${destLat},${destLng}`,"_blank"); 
-    });
+  if (/Android|iPhone|iPad/i.test(navigator.userAgent)) {
+    // 모바일 환경 → 지도 표시 URL 우선 열기
+    window.location.href = mapUrl;
   } else {
-    // Geolocation 미지원 → 웹으로 fallback
-    window.open(`https://map.kakao.com/link/to/선택위치,${destLat},${destLng}`,"_blank"); 
+    // PC 환경 → 새 탭에서 지도 표시
+    window.open(mapUrl, "_blank");
   }
 }
+
 
 
 
@@ -427,5 +380,6 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
