--- a/index.html
+++ b/index.html
@@ -286,16 +286,9 @@ function navigateToPatrol() {
   }
   const [destLat, destLng] = lastClickedCoord.split(",");
 
-  // 지도 표시 URL (앱 설치 시 카카오맵 앱으로, 미설치 시 웹으로 열림)
+  // ✅ 항상 웹 URL로만 열기
   const mapUrl = `https://map.kakao.com/link/map/선택위치,${destLat},${destLng}`;
-
-  if (/Android|iPhone|iPad/i.test(navigator.userAgent)) {
-    // 모바일 환경 → 지도 표시 URL 우선 열기
-    window.location.href = mapUrl;
-  } else {
-    // PC 환경 → 새 탭에서 지도 표시
-    window.open(mapUrl, "_blank");
-  }
+  window.open(mapUrl, "_blank");
 }
 
 
@@ -380,6 +373,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
