--- a/index.html
+++ b/index.html
@@ -286,9 +286,11 @@ function navigateToPatrol() {
   }
   const [destLat, destLng] = lastClickedCoord.split(",");
 
-  // ✅ 항상 웹 URL로만 열기
+  // 지도 표시 URL (웹으로만 열기)
   const mapUrl = `https://map.kakao.com/link/map/선택위치,${destLat},${destLng}`;
-  window.open(mapUrl, "_blank");
+
+  // 항상 현재 탭에서 열기
+  window.location.href = mapUrl;
 }
 
 
@@ -373,6 +375,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
