--- a/index.html
+++ b/index.html
@@ -88,6 +88,62 @@ let lastClickedMarker = null;
 let gpxTrackLayer = null;
 let gpxWptLayer = null;
 
+function clearGpx(){
+  if (gpxTrackLayer) { map.removeLayer(gpxTrackLayer); gpxTrackLayer = null; }
+  if (gpxWptLayer)   { map.removeLayer(gpxWptLayer);   gpxWptLayer = null; }
+}
+
+// GPX 텍스트에서 wpt 파싱 → 마커 표시
+function addWptMarkersFromGpxText(gpxText){
+  const parser = new DOMParser();
+  const xml = parser.parseFromString(gpxText, "application/xml");
+  const wpts = Array.from(xml.getElementsByTagName("wpt"));
+  if (wpts.length === 0) return;
+
+  gpxWptLayer = L.layerGroup().addTo(map);
+
+  const icon = L.icon({
+    iconUrl: "https://maps.google.com/mapfiles/ms/icons/green-dot.png",
+    iconSize: [32, 32]
+  });
+
+  wpts.forEach(wpt=>{
+    const lat = parseFloat(wpt.getAttribute("lat"));
+    const lon = parseFloat(wpt.getAttribute("lon"));
+    const nameNode = wpt.getElementsByTagName("name")[0];
+    const timeNode = wpt.getElementsByTagName("time")[0];
+    const name = nameNode ? nameNode.textContent : "GPX-WPT";
+    const time = timeNode ? timeNode.textContent : "";
+
+    const m = L.marker([lat, lon], { icon }).addTo(gpxWptLayer);
+    m.bindPopup(`<strong>${name}</strong><br/>${time ? "시간: " + time : ""}`);
+
+    // ✅ 기존 기능과 연결: 클릭하면 길찾기/복사 대상 좌표로 세팅
+    m.on("click", ()=>{
+      lastClickedCoord = `${lat.toFixed(6)},${lon.toFixed(6)}`;
+      document.getElementById("clickedCoords").innerText = `📍 선택: ${lastClickedCoord}`;
+    });
+  });
+}
+
+// routes/xxx.gpx 로드 → 트랙+웨이포인트 표시
+async function loadGpxFromUrl(url){
+  clearGpx();
+
+  // 1) 트랙(경로 라인)
+  gpxTrackLayer = new L.GPX(url, { async: true })
+    .on("loaded", (e)=>{
+      try { map.fitBounds(e.target.getBounds()); } catch(err){}
+    })
+    .addTo(map);
+
+  // 2) wpt(웨이포인트)
+  const res = await fetch(url);
+  const text = await res.text();
+  addWptMarkersFromGpxText(text);
+}
+
+
 function setActiveCategories(selectedCategories){
   activeCategories = selectedCategories.filter(cat => patrolSchedules.hasOwnProperty(cat));
   updatePatrolDisplay();
@@ -385,5 +441,6 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
