--- a/index.html
+++ b/index.html
@@ -437,10 +437,12 @@ document.addEventListener("DOMContentLoaded", ()=>{
   });
   initMap(); 
   updatePatrolDisplay();
+  loadGpxFromUrl("routes/patrol_2025-11-24.gpx");
 });
 </script>
 </body>
 </html>
+
 
 
 
