--- a/index.html
+++ b/index.html
@@ -210,6 +210,32 @@ function initMap(){
   markerCluster = L.markerClusterGroup();
   map.addLayer(markerCluster);
 
+  gpxLayerGroup = L.layerGroup().addTo(map);
+
+  // ✅ routes/ 의 GPX 파일들을 지도에 트랙으로 표시
+  ROUTE_GPX_FILES.forEach((url) => {
+    new L.GPX(url, {
+      async: true,
+      polyline_options: {
+        color: "#ff0000",
+        weight: 4,
+        opacity: 0.85
+      },
+      marker_options: {
+        startIconUrl: null,
+        endIconUrl: null,
+        shadowUrl: null
+      }
+    })
+    .on("loaded", function (e) {
+      // map.fitBounds(e.target.getBounds()); // 필요 시 활성화
+    })
+    .on("error", function () {
+      console.warn("GPX 로드 실패:", url);
+    })
+    .addTo(gpxLayerGroup);
+  });
+
   map.on("click", e=>{
     if(searchMode) return;
     lastClickedCoord = `${e.latlng.lat.toFixed(6)},${e.latlng.lng.toFixed(6)}`;
@@ -390,5 +416,6 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
